--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="theme-color" content="#000000" />
     <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
     <title>AstroLumina</title>
-    <script type="module">
+    <!-- <script type="module">
       // Early error logging
       window.onerror = function(msg, url, line, col, error) {
         try {
@@ -100,7 +100,7 @@
       if (localStorage.getItem('early_errors') || localStorage.getItem('app_errors')) {
         showDebugUI(true);
       }
-    </script>
+    </script> -->
   </head>
   <body>
     <div id="root"></div>
